# gint-extract

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
gint_extract/: database.py  database_test.py  extract.py  vars.py
